feat(crrss): add reservation crud